Changes from 0.1.5-pre2 to 0.1.5:
	- version rename

Changes from 0.1.5-pre1 to 0.1.5-pre2:
	- Version rename
	- Added some extensions from grsecurity.
	  http://www.grsecurity.net/
	- added {tcp,udp}_blackhole at /proc/sys/net/ipv4
	  to disable RST-s and ICMP errors on unbound ports
	- upgraded busybox to version 1.00
	- added libnet-1.0.2a
	- added nemesis
	- upgraded from freeswan 2.06 to openswan 2.2.0
	- upgraded the linux kernel to 2.4.29

Changes from 0.1.4 to 0.1.5-pre1:
	- added the vtun package
	- added the ltraf package
	- all sources are stored locally at ftp.cflinux.hu for a last resort
	- upgraded to the linux kernel 2.4.27
	- rewritten some main scripts that allow
	  booting from other device than /dev/hdc (read BUILD, section Notes)
	- upgraded the farsync driver to 1.04.0
	- added support for usb flash devices (aka usblinux :))
	- updated the resolver to support tcp queries and
	  thus enables the ability of extraction TXT records
	  from dns, and this enables OE with freeswan
	- updated net-snmp to version 5.1.2
	- updated the linux kernel to 2.4.28

Changes from 0.1.4-pre3 to 0.1.4:
	- version rename

Changes from 0.1.4-pre2 to 0.1.4-pre3:
	- Added the small mcom serial communications program
	- Patched rdate to support the -a option
	- Upgraded to the quagga 0.96.5
	- Upgraded net-snmp to use the unprivileged snmp user
	- Added the rp-l2tp package
	- Added the poptop package

Changes from 0.1.4-pre1 to 0.1.4-pre2:
	- Upgraded to the busybox 1.00-pre9
	- added mawk (1.3.3)
	- added the libgmp library (4.1.2)
	- added the freeswan package (2.05)
	- an mkcramfs tool is now included in the package
	- added the host mibgroup to the snmpd agent
	- upgraded to the latest openssl(0.9.6m) and openssh(3.8p1) versions

Changes from 0.1.3 to 0.1.4-pre1:
	- upgraded to the linux kernel 2.4.25
	- finally it compiles with gcc3, on debian/testing

Changes from 0.1.2 to 0.1.3:
	- added a postgresql client