@@ -1,3 +1,6 @@
+Changes from 0.1.5 to 0.2-pre1:
+	- added the ethtool package
+
 Changes from 0.1.5-pre2 to 0.1.5:
 	- version rename
 
